# pregamejamgamejam2019

./: .editorconfig  .gitignore  Cargo.toml  README.md  activate.sh  build.rs  final.rs
assets/levels/: Basement.json  GroundFloor.json  tilemap.json
assetsource/: GroundFloorLevel.xcf
docs/: assetlist.txt
engine/: Cargo.toml
engine/examples/: drawable.rs  game_object_test.rs  grid_test.rs  level_editor.rs  pause_test.rs
engine/src/: animated_sprite.rs  audio_engine.rs  axis_controller.rs  bevel_shape.rs  bounding_box.rs  decoration_object.rs  dimmer.rs  drawable.rs  extent.rs  game_object.rs  game_state.rs  grid.rs  grid2.rs  image.rs  level.rs  level2D.rs  level2d.rs  lib.rs  linear_force.rs  menu_screen.rs  message_state.rs  movable_object.rs  offset.rs  physics.rs  prelude.rs  radial_force.rs  ray_shape.rs  rect.rs  rigid_body.rs  round_shape.rs  sat_collider.rs  scene.rs  slider_controller.rs  splash_screen.rs  square_shape.rs  static_sprite.rs  texture_registry.rs  timer.rs  transform.rs  transition_state.rs  (+2 more)
gj2020/: Cargo.toml  README.md  build.rs
gj2020/assets/images/: alert.xcf  god_Back_idle.kra  god_Back_walk.kra  god_Back_walk1.kra  god_Front_walk.kra  god_Front_walk2.kra  god_Left_walk1.kra  god_Right_idle.kra  god_Right_walk.kra  god_Right_walk1.kra  ladder.kra  large_stairs.kra  noah_victory.png~  small_stairs.kra  tower.kra
gj2020/assets/images/Animals/: Doves.kra
gj2020/assets/images/AppleTree/: apple_tree.png~
gj2020/assets/images/Demon/: Demon.kra  Demon1.kra
gj2020/assets/images/Eve/: Eve_front_idle.png~
gj2020/assets/images/GodRoom/: .floor.png-autosave.kra  cloud_edge.png~  cloud_edge1.png~  cloud_edge2.png~  cloud_edge3.png~
gj2020/assets/images/KritaFiles/: Club_up.kra  Dino.kra  Earth.kra  Eve.kra  Mouse.kra  Sun.kra  alert.kra  blobFish.kra  bushTile.kra  carpet.kra  god_Front_idle.kra  god_Left_idle.kra  god_Left_walk.kra  grassTile.kra  noah_left_idle.kra  starrySky.kra  tree.kra
gj2020/assets/images/Lion/: lion.kra
gj2020/assets/images/Noah/: noah.kra
gj2020/assets/images/Planets/: Astroid.kra  GreenMoon.kra
gj2020/assets/levels/: Ark.json  Ark2.json  Ark3.json  Ark4.json  hub.json  snek.json  tower.json  tower_ground_only.json
gj2020/examples/: level_editor.rs  level_editor2D.rs  object_editor.rs
gj2020/src/: audio_library.rs  babylon_state.rs  celestial_body.rs  end_state.rs  god.rs  hell_state.rs  hub_state.rs  ladder.rs  main.rs  minigame.rs  noah.rs  noah_state.rs  ocean.rs  plank.rs  smooth_transform.rs  snek.rs  snek_state.rs  space_state.rs
src/: alex.rs  animated_sprite.rs  audio_engine.rs  audio_library.rs  door.rs  drawable.rs  dust.rs  fuse_box.rs  key.rs  key_in_dust.rs  main.rs  main_menu.rs  menu_screen.rs  pause_screen.rs  player.rs  roomba.rs  texture_registry.rs  title_screen.rs
