[package]
name = "gamejam"
version = "0.1.0"
authors = ["are"]

[target.'cfg(windows)'.dependencies]
sdl2 = { version = "0.33.0", features = ["bundled"] }
[target.'cfg(unix)'.dependencies]
sdl2 = { version = "0.33.0" }

[dependencies]
rand = "0.6.4"
stb_image = "0.2.1"
engine = { path = "engine" }

[build-dependencies]
fs_extra = "1.1.0"
