[package]
name = "engine"
version = "0.1.0"
authors = ["Anders Rein <andersrein87@gmail.com>"]

[target.'cfg(windows)'.dependencies]
sdl2 = { version = "0.33.0", features = ["bundled"] }
[target.'cfg(unix)'.dependencies]
sdl2 = { version = "0.33.0" }

[dependencies]
bincode = "1.0.1"
rand = "0.6.4"
serde = "1.0.85"
serde_derive = "1.0.85"
serde_json = "1.0"
stb_image = "0.2.1"
