[package]
name = "engine"
version = "0.1.0"
authors = ["Anders Rein <andersrein87@gmail.com>"]

[target.'cfg(windows)'.dependencies]
sdl2 = { version = "0.34.5", features = ["bundled"] }
[target.'cfg(unix)'.dependencies]
sdl2 = { version = "0.31.0" }

[dependencies]
bincode = "1.3.3"
rand = "0.8.4"
serde = "1.0.126"
serde_derive = "1.0.126"
serde_json = "1.0.64"
stb_image = "0.2.3"
