[package]
name = "gj2020"
version = "0.1.0"
authors = ["are"]

[target.'cfg(windows)'.dependencies]
sdl2 = { version = "0.34.5", features = ["bundled"] }
[target.'cfg(unix)'.dependencies]
sdl2 = { version = "0.31.0" }

[dependencies]
rand = "0.8.4"
stb_image = "0.2.3"
engine = { path = "../engine" }

[build-dependencies]
fs_extra = "1.2.0"
